tdf#118768 fix pptx export of put on the brake animation.

1. Convert to, by, from based on attribute name for Animate.
2. Export auto reverse (autoRev) attribute.

Change-Id: I11ae9997de29a5b0992889eed2eb58d48d81fbb5